# claudia

./: .gitignore  .gitmodules  .mcp.json.example  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README-old.md  README.md  SECURITY.md  create-claudia-1.0.0.tgz  package-lock.json  package.json
memory-daemon/: .gitignore  README.md  pyproject.toml  requirements.txt  test.sh
memory-daemon/claudia_memory/: __init__.py  __main__.py  config.py  database.py  embeddings.py  language_model.py  migration.py  schema.sql  utils.py
memory-daemon/scripts/: diagnose.ps1  diagnose.sh  install.ps1  install.sh  migrate-legacy-db.py  migrate_markdown.py  seed_demo.py
memory-daemon/tests/: __init__.py  conftest.py  test_alias_filter.py  test_alias_specificity.py  test_audit.py  test_backup.py  test_backup_naming.py  test_batch_parallel.py  test_bitemporal.py  test_briefing.py  test_briefing_counts.py  test_canvas_generator.py  test_canvas_preservation.py  test_cognitive.py  test_consolidation.py  test_consolidation_v2.py  test_corrections.py  test_daemon_lifecycle.py  test_database.py  test_dedup_fuzzy.py  test_deep_recall.py  test_documents.py  test_embedding_cache.py  test_embedding_migration.py  test_entity_lifecycle.py  test_entity_management.py  test_entity_paths.py  test_entity_resolution.py  test_entity_search.py  test_entity_type_inference.py  test_extractor_stopwords.py  test_fts_hybrid.py  test_fuzzy_entity.py  test_graph.py  test_graph_analytics.py  test_graph_operations.py  test_graph_retrieval.py  test_guards.py  (+43 more)
(+467 files in other folders)
