[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudia-memory"
version = "1.0.0"
description = "Superhuman memory system for Claudia - never forget, always learn"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kamil Banc"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sqlite-vec>=0.1.0",
    "httpx>=0.25.0",
    "apscheduler>=3.10.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
claudia-memory = "claudia_memory.__main__:main"

[project.urls]
Homepage = "https://github.com/kbanc85/claudia"
Repository = "https://github.com/kbanc85/claudia"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
claudia_memory = ["schema.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
